--- a/clearwater-cassandra/usr/share/clearwater/cassandra/cassandra-env.sh.template
+++ b/clearwater-cassandra/usr/share/clearwater/cassandra/cassandra-env.sh.template
@@ -137,7 +137,7 @@ esac
 
 #MAX_HEAP_SIZE="4G"
 #HEAP_NEWSIZE="800M"
-TEMPLATE_HEAPSIZE_SECTION
+<<<TEMPLATE_HEAPSIZE_SECTION>>>
 
 # Set this to control the amount of arenas per-thread in glibc
 #export MALLOC_ARENA_MAX=4
@@ -251,7 +251,7 @@ fi
 # Prefer binding to IPv4 network intefaces (when net.ipv6.bindv6only=1). See
 # http://bugs.sun.com/bugdatabase/view_bug.do?bug_id=6342561 (short version:
 # comment out this entry to enable IPv6 support).
-TEMPLATE_IPV4_SECTION
+<<<TEMPLATE_IPV4_SECTION>>>
 
 
 # jmx: metrics and administration interface
