--- a/clearwater-cassandra/usr/share/clearwater/cassandra/cassandra-env.sh.template
+++ b/clearwater-cassandra/usr/share/clearwater/cassandra/cassandra-env.sh.template
@@ -273,5 +273,6 @@ else
   JVM_OPTS="$JVM_OPTS -Dcom.sun.management.jmxremote.authenticate=true"
   JVM_OPTS="$JVM_OPTS -Dcom.sun.management.jmxremote.password.file=/etc/cassandra/jmxremote.password"
 fi
+JVM_OPTS="$JVM_OPTS -Dcassandra.ignore_rack=true -Dcassandra.ignore_dc=true"
 
 JVM_OPTS="$JVM_OPTS $JVM_EXTRA_OPTS"
