Update env to allow re-writing DC and Rack. Update YAML to set directory paths

--- a/clearwater-cassandra/usr/share/clearwater/cassandra/cassandra-env.sh.template
+++ b/clearwater-cassandra/usr/share/clearwater/cassandra/cassandra-env.sh.template
@@ -302,6 +302,8 @@ fi
 #MX4J_ADDRESS="-Dmx4jaddress=127.0.0.1"
 #MX4J_PORT="-Dmx4jport=8081"
 
+JVM_OPTS="$JVM_OPTS -Dcassandra.ignore_rack=true -Dcassandra.ignore_dc=true"
+
 JVM_OPTS="$JVM_OPTS $MX4J_ADDRESS"
 JVM_OPTS="$JVM_OPTS $MX4J_PORT"
 JVM_OPTS="$JVM_OPTS $JVM_EXTRA_OPTS"
